src/test/testData/highlighting/InvalidSortOptionHighlighting.kt
class InvalidSortOptionHighlighting {
    // sort: <error descr="Invalid sort order">error</error>
    val apple = 1
    val banana = "2"
    // sort: end
}